--- a/WebApp/Views/Shared/Partials/Components/_NavLinks.cshtml
+++ b/WebApp/Views/Shared/Partials/Components/_NavLinks.cshtml
@@ -9,13 +9,13 @@
         <i class="fa-duotone fa-solid fa-briefcase"></i>
         <span>Projects</span>
     </a>
-    <a class="nav-link @(Context.Request.Path == "/admin/members" ? "active": "")" asp-action="Members" asp-controller="Admin">
-        <i class="fa-duotone fa-solid fa-user-group"></i>
-        <span>Team Members</span>
-    </a>
-
-    @* <a class="nav-link @(Context.Request.Path == "/admin/clients" ? "active": "")" asp-action="Clients" asp-controller="Admin"> *@
-    @*     <i class="fa-duotone fa-solid fa-handshake"></i> *@
-    @*     <span>Clients</span> *@
+    @* <a class="nav-link @(Context.Request.Path == "/admin/members" ? "active": "")" asp-action="Members" asp-controller="Admin"> *@
+    @*     <i class="fa-duotone fa-solid fa-user-group"></i> *@
+    @*     <span>Team Members</span> *@
     @* </a> *@
+
+    @* <a class="nav-link @(Context.Request.Path == "/admin/clients" ? "active": "")" asp-action="Clients" asp-controller="Admin">  *@
+    @*     <i class="fa-duotone fa-solid fa-handshake"></i>  *@
+    @*     <span>Clients</span>  *@
+    @*  </a> *@
 </nav>
