--- a/WebApp/Views/Shared/Partials/Sections/_AddProjectForm.cshtml
+++ b/WebApp/Views/Shared/Partials/Sections/_AddProjectForm.cshtml
@@ -8,7 +8,7 @@
             <button type="button" class="btn-close" data-close="true"></button>
         </div>
 
-        <form novalidate method="post" asp-action="AddProject" asp-controller="Projects">
+        <form id="modalForm" novalidate method="post" asp-action="AddProject" asp-controller="Projects">
 
             <div class="image-previewer circle">
                 <img src="" class="image-preview" />
