--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -110,6 +110,15 @@
     --btn-account-border-color: var(--white-100);
     --btn-account-text-color: var(--dark-400);
 
+    --btn-close-text-color: var(--dark-400);
+    --btn-close-border-color: var(--transparent);
+    --btn-close-background-color: var(--transparent);
+
+    --btn-close-text-hover-color: var(--dark-400);
+    --btn-close-border-hover-color: var(--transparent);
+    --btn-close-background-hover-color: var(--blue-accent-10);
+
+
     --switch-background-color: var(--gray-500);
     --switch-slider-color: var(--white-100);
     --switch-checked-background-color: var(--blue);
@@ -586,14 +595,43 @@ a:hover {
     font-size: 1.4em;
     position: relative;
     z-index: 0;
-
-
-
 }
+
+
+.btn-actions {
+    transition: background-color 0.1s ease-in-out, border-color 0.1s ease-in-out, color 0.1s ease-in-out;
+    background-color: var(--btn-close-background-color);
+    border: 1px solid var(--btn-close-border-color);
+    color: var(--btn-close-text-color);
+    z-index: 999;
+    font-size: 1.4rem;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: var(--border-radius);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+    .btn-actions:hover {
+        background-color: var(--btn-close-background-hover-color);
+        border: 1px solid var(--btn-close-border-hover-color);
+        color: var(--btn-close-text-color);
+        text-decoration: none;
+    }
 
 
 /* dots */
 
+.dot {
+    display: none;
+    position: absolute;
+    right: 3px;
+    top: 4px;
+    z-index: 1;
+}
 /*.dot {
     font-size: 0.5em;
     position: absolute;
@@ -612,6 +650,30 @@ a:hover {
 
 
 
+.btn-close-1 {
+    transition: background-color 0.1s ease-in-out, border-color 0.1s ease-in-out, color 0.1s ease-in-out;
+    color: var(--btn-close-text-color);
+    border: 1px solid var(--btn-close-border-color);
+    background-color: var(--btn-close-background-color);
+    z-index: 999;
+    font-size: 1.4rem;
+    text-decoration: none;
+    border-radius: var(--border-radius);
+    height: 40px;
+    width: 40px;
+}
+
+    .btn-close-1::before {
+    content: '\f00d';
+    font-family: var(--font-fa-pro);
+    }
+
+    .btn-close-1:hover {
+        background-color: var(--btn-close-background-hover-color);
+        border: 1px solid var(--btn-close-border-hover-color);
+        color: var(--btn-close-text-hover-color);
+        text-decoration: none;
+    }
 
 
 .btn-close {
@@ -1036,10 +1098,24 @@ header,
     border-radius: 14px;
 }
 
+.project-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+}
+
+.project {
+    margin-top: 1.5rem;
+    text-align: center;
+    display: grid;
+    gap: 0.8rem;
+}
+
 /* dropdown-card */
 
 
 .dropdown {
+    display: none;
     position: absolute;
     right: 0;
     top: 110%;
@@ -1049,6 +1125,8 @@ header,
     padding: 0.8rem;
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
+    position:absolute;
+    z-index: 999;
 }
 
 .dropdown-show {
@@ -1075,9 +1153,10 @@ header,
 }
 
 .notifications {
-    color: var(--account-name-text-color);
-    border: 2px solid var(--account-name-border-color);
-    background-color: var(--account-name-background-color);
+    gap: 0.5rem;
+    color: var(--user-notification-text-color);
+    border: 2px solid var(--user-notification-border-color);
+    background-color: var(--user-notification-background-color);
     display: grid;
     grid-template-columns: auto 1fr auto;
     grid-template-areas: "img message btn" "img time btn";
@@ -1088,7 +1167,14 @@ header,
     width: 100%;
 }
 
+    .notifications:hover {
+        color: var(--user-notification-text-hover-color);
+        border: 2px solid var(--user-notification-background-hover-color);
+        background-color: var(--user-notification-border-hover-color);
+    }
+
 .notfication {
+
 /*        color: var(--account-name-text-color);
     border: 2px solid var(--account-name-border-color);
     background-color: var(--account-name-background-color);
@@ -1141,6 +1227,10 @@ header,
     color: var(--user-notification-text-muted-color);
 }
 
+.btn-close {
+    grid-area: btn;
+}
+
 .dropdown-options {
     display: grid;
     gap: 0.5rem;
@@ -1157,6 +1247,7 @@ header,
 .dropdown-actions {
     display: grid;
     gap: 0.5rem;
+  
 }
 
 
@@ -1345,4 +1436,93 @@ input:checked + .slider {
     cursor: pointer;
     height: 40px;
 }
+
+.card-header {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-areas: "img name action" "img client na";
+    align-items: center;
+    column-gap: 1rem;
+    position: relative;
+    background-color: white;
+    min-width: 0;
+    text-align: left;
+}
+
+
+
+    .card-header .project1-image {
+        grid-area: img;
+        width: 56px;
+        height: 56px;
+        overflow: hidden;
+        border-radius: var(--border-radius);
+
+    }
+
+    .card-body {
+        margin: 0 0.2rem;
+        min-height: 100px;
+    }
+
+.project1-image img {
+    width: 56px;
+    height: 56px;
+    object-fit: contain;
+}
+
+.card-header .project-name {
+    grid-area: name;
+
+}
+
+.card-header .client-name {
+    grid-area: client;
+    color: var(--text-muted-color);
+
+}
+
+.card-header .project-name {
+    grid-area: name;
+
+}
+
+.card-header .project-actions {
+    grid-area: action;
+
+}
+
+.dropdown {
+    box-shadow: 0 0 5px 2px rgba(137, 137, 137, 0.1);
+}
+
+.remove {
+    color: var(--red);
+}
+
+.project-status {
+    display: flex;
+    gap: 1.5rem;
+    color: var(--gray-800);
+    margin-bottom: 1rem;
+    font-size: 0.9rem;
+}
+
+.status {
+    cursor: pointer;
+    position: relative;
+}
+    .status.active {
+        color: var(--blue-accent);
+        font-weight: var(--font-bold);
+    }
+
+    .status.active::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -4px;
+        height: 2px;
+        background-color: var(--blue-accent);
+    }
 
