Fixat lite med frontend som jag hade missat, "remember me" delen på login

--- a/WebApp/Views/Auth/Login.cshtml
+++ b/WebApp/Views/Auth/Login.cshtml
@@ -42,6 +42,10 @@
         } 
 
             <div class="form-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="rememberme" name="RememberMe" />
+                    <label for="rememberMe">Remember Me</label>
+                </div>
                 <button type="submit" class="btn btn-blue btn-submit">Log In</button>
             </div>
 
