--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -1526,3 +1526,9 @@ input:checked + .slider {
         background-color: var(--blue-accent);
     }
 
+.checkbox-group {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    gap: 0.5rem;
+}
